fix card image and card title overflowing

--- a/style/main.css
+++ b/style/main.css
@@ -232,13 +232,23 @@ main {
 }
 
 .product-card__image-container {
-  padding: 3rem 4rem;
+  display: flex;
+  justify-content: center;
+  padding: 3rem 1rem;
 
   background-color: var(--secondary);
   border-radius: 1rem;
+  cursor: pointer;
+}
+
+.product-card__image-container:hover {
+  background-color: #e5e5e5;
 }
 
 .product-card__image {
+  height: 150px;
+
+  object-fit: contain;
   mix-blend-mode: multiply;
 }
 
@@ -246,6 +256,8 @@ main {
   width: 100%;
 
   display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .product-card__title {
